static/css/styles.css
@font-face {
    font-family: "Beleren-Bold";
    src: url("../fonts/Beleren-Bold/beleren-boldP101.eot"); /* IE9 Compat Modes */
    src: url("../fonts/Beleren-Bold/beleren-boldP101.eot?#iefix") format("embedded-opentype"), /* IE6-IE8 */ url("../fonts/Beleren-Bold/beleren-boldP101.otf") format("opentype"), /* Open Type Font */ url("../fonts/Beleren-Bold/beleren-boldP101.svg") format("svg"), /* Legacy iOS */ url("../fonts/Beleren-Bold/beleren-boldP101.ttf") format("truetype"), /* Safari, Android, iOS */ url("../fonts/Beleren-Bold/beleren-boldP101.woff") format("woff"), /* Modern Browsers */ url("../fonts/Beleren-Bold/beleren-boldP101.woff2") format("woff2"); /* Modern Browsers */
    font-weight: normal;
    font-style: normal;
    font-display: swap;

}

@font-face {
    font-family: "mplantin";
    src: url("../fonts/mplantin/mplantin.eot"); /* IE9 Compat Modes */
    src: url("../fonts/mplantin/mplantin.eot?#iefix") format("embedded-opentype"), /* IE6-IE8 */ url("../fonts/mplantin/mplantin.otf") format("opentype"), /* Open Type Font */ url("../fonts/mplantin/mplantin.svg") format("svg"), /* Legacy iOS */ url("../fonts/mplantin/mplantin.ttf") format("truetype"), /* Safari, Android, iOS */ url("../fonts/mplantin/mplantin.woff") format("woff"), /* Modern Browsers */ url("../fonts/mplantin/mplantin.woff2") format("woff2"); /* Modern Browsers */
    font-weight: normal;
    font-style: normal;
    font-display: swap;

}

body {
    /*padding: env(safe-area-inset-top) env(safe-area-inset-right) env(safe-area-inset-bottom) env(safe-area-inset-left);*/
    font-family: "mplantin", sans-serif;
    /*background: red !important;*/
    /* Disables pull-to-refresh but allows overscroll glow effects. */

    overscroll-behavior-y: contain;

}


#successAlert,
#errorAlert {
    padding: 0.375rem 0.75rem;
}

h1, h2, h3, h5, h6 {
    font-family: Beleren-Bold, sans-serif;
}

.text-black {
    color: #000000;
}

#footer_menu .nav-item {
    /*text-align: left !important;*/
    flex: 0 1 auto !important;
    padding: 0;
}

.correct_img_class,
.wrong_img_class {
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    opacity: 0.7;
}

#card_holder .btn {
    /*border-radius: 0;*/

    padding: 0.1rem 0.1rem;
    font-family: Beleren-Bold, sans-serif;
}

#card_holder .btn:first-of-type {
    /*margin-left: -1px;*/
    border-top-left-radius: 0.25rem;
    border-top-right-radius: 0.25rem;
}

.btn-group-vertical > .btn:not(:first-child),
.btn-group-vertical > .btn-group:not(:first-child) {
    margin-left: 0;
    /*border-top-left-radius: 0.25rem;*/
    /*border-top-right-radius: 0.25rem;*/
}

#card_names .x,
#card_names .check {
    left: 5px;
}

#card_imgs .x,
#card_imgs .check {
    /*left: 5px;*/
    /*left: 37%;*/
    /* font-size: 2rem; */
    /*width: 50px;*/
    /*height: 50px;*/
    z-index: 1;
}


/*#card_holder .btn-border-1 {*/
/*    border-top-left-radius: 0.25rem;*/
/*    border-bottom: 1px solid #343a40 !important;*/
/*    border-right: 1px solid #343a40 !important;*/
/*    !*border-bottom-right-radius: 0.25rem;*!*/
/*}*/

/*#card_holder .btn-border-2 {*/
/*    border-top-right-radius: 0.25rem;*/
/*    !*border-bottom-right-radius: 0.25rem;*!*/
/*    border-bottom: 1px solid #343a40 !important;*/
/*    border-left: 1px solid #343a40 !important;*/
/*}*/

/*#card_holder .btn-border-3 {*/
/*    !*border-radius: 0;*!*/
/*    border-right: 1px solid #343a40 !important;*/
/*    border-top: 1px solid #343a40 !important;*/
/*    border-bottom: 1px solid #343a40 !important;*/
/*    !*border-bottom-right-radius: 0.25rem;*!*/
/*}*/

/*!**!*/
/*#card_holder .btn-border-4 {*/
/*    !*border-top-right-radius: 0.25rem;*!*/
/*    border-left: 1px solid #343a40 !important;*/
/*    border-top: 1px solid #343a40 !important;*/
/*    border-bottom: 1px solid #343a40 !important;*/
/*    !*border-bottom-right-radius: 0.25rem;*!*/
/*}*/

/*#card_holder .btn-border-5 {*/
/*    border-bottom-left-radius: 0.25rem;*/
/*    border-right: 1px solid #343a40 !important;*/
/*    border-top: 1px solid #343a40 !important;*/
/*    !*border-bottom-right-radius: 0.25rem;*!*/
/*}*/

/*#card_holder .btn-border-6 {*/
/*    border-bottom-right-radius: 0.25rem;*/
/*    border-left: 1px solid #343a40 !important;*/
/*    border-top: 1px solid #343a40 !important;*/
/*    !*border-bottom-right-radius: 0.25rem;*!*/
/*}*/


#card_holder .btn:last-of-type {
    border-bottom-left-radius: 0.25rem;
    border-bottom-right-radius: 0.25rem;
}

#card_imgs label {
    /*flex: 1 0 calc(25% - 10px);*/
    /*flex-basis: 33.333333%*/
    width: 49%;
}

#card_imgs.three_imgs label {
    /*flex: 1 0 calc(25% - 10px);*/
    /*flex-basis: 33.333333%*/
    width: 33%;
}

.btn-group > .btn-group:not(:first-child) {
    margin-left: 0;
}

.lds-ripple {
    display: inline-block;
    position: relative;
    width: 64px;
    height: 64px;
}


.bg-magenta {
    /*background-color: #FF00FF;*/
    color: #fff;
    background-color: #FF00FF;
    border-color: #FF00FF;
}

.lds-ripple div {
    position: absolute;
    border: 4px solid #fff;
    opacity: 1;
    border-radius: 50%;
    animation: lds-ripple 1s cubic-bezier(0, 0.2, 0.8, 1) infinite;
}

.lds-ripple div:nth-child(2) {
    animation-delay: -0.5s;
}

.center-container {
    position: relative;
}

.absolute-center {
    width: 128px;
    height: 128px;
    overflow: auto;
    margin: auto;
    position: absolute;
    top: 0;
    left: 0;
    bottom: 0;
    right: 0;
}

@keyframes lds-ripple {
    0% {
        top: 50%;
        left: 50%;
        width: 0;
        height: 0;
        opacity: 1;
    }
    100% {
        top: -1px;
        left: -1px;
        width: 100%;
        height: 100%;
        opacity: 0;
    }
}

.btn-secondary:not(:disabled):not(.disabled):active, .btn-secondary:not(:disabled):not(.disabled).active, .show > .btn-secondary.dropdown-toggle {
    color: inherit;
    background-color: inherit;
    border-color: inherit;
}

.offline-notification {
    display: none;
    padding: 1em;
    text-align: center;
}

.offline-notification.show {
    background-color: red;
    color: white;
    display: block;
}

.minus {
    font-family: sans-serif;
}

.flex-basis-0 {
    flex-basis: 0 !important;
}

.height_100_js {
    height: 100vh; /* Use vh as a fallback for browsers that do not support Custom Properties */
    height: calc(var(--vh, 1vh) * 100);
}


#installModal .modal-dialog {
    /*text-align: left; !* you'll likely want this *!*/
    /*max-width: 100%;*/
    /*width: auto !important;*/
    /*display: inline-block;*/
    width: fit-content;
}

#btnAdd {
    /*background-color: blue;*/
    /*background-color: red;*/
    /*border: 1px solid black;*/
    /*color: white;*/
    /*display: inline-block;*/
    /*visibility: hidden;*/
    /*text-decoration: none;*/
    /*font-weight: 600;*/
    /*padding: .5rem 1rem;*/
    /*margin: 0 auto;*/
}


@media (max-width: 767px) {
    #footer_menu .nav-link {
        /*width: 100%;*/
    }
}

@media (max-width: 576px) {
    .h1-small {
        font-size: 0.75rem;
    }

    .haha {
        display: none;
    }
}

@media (min-width: 576px) {
    .col-auto {
        width: 100%;
    }
}

@media (max-width: 346px) {
    .decklists_url {
        display: none;
    }
}


@supports (padding:max(0px)) {
    body, header, footer {
        padding-left: min(0vmin, env(safe-area-inset-left));
        padding-right: min(0vmin, env(safe-area-inset-right));
        padding-top: min(0vmin, env(safe-area-inset-top));
        padding-bottom: min(0vmin, env(safe-area-inset-bottom));
    }
}

